# music-mood-board

./: README.md  package-lock.json  package.json  pyproject.toml  run.py  tailwind.config.js
moodBoard/: __init__.py  auth.py
moodBoard/spotify_api/: spotify_client.py  spotify_handler.py
moodBoard/static/css/: output.css
moodBoard/templates/: input_txt.html  recommendations.html
